# CGPUImage-android

./: README.md
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/lvhiei/cgpuimage/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: blend.rgba  lookup_amatorka.rgba  lookup_miss_etikate.rgba  lookup_soft_elegance_1.rgba  lookup_soft_elegance_2.rgba  squares.rgba
app/src/main/cpp/: NativeRender.cpp  NativeRender.h  native-lib.cpp
app/src/main/cpp/GPUImage/: GPUImage3x3ConvolutionFilter.cpp  GPUImage3x3ConvolutionFilter.h  GPUImage3x3TextureSamplingFilter.cpp  GPUImage3x3TextureSamplingFilter.h  GPUImageAdaptiveThresholdFilter.cpp  GPUImageAdaptiveThresholdFilter.h  GPUImageAddBlendFilter.cpp  GPUImageAddBlendFilter.h  GPUImageAlphaBlendFilter.cpp  GPUImageAlphaBlendFilter.h  GPUImageAmatorkaFilter.cpp  GPUImageAmatorkaFilter.h  GPUImageBilateralFilter.cpp  GPUImageBilateralFilter.h  GPUImageBoxBlurFilter.cpp  GPUImageBoxBlurFilter.h  GPUImageBrightnessFilter.cpp  GPUImageBrightnessFilter.h  GPUImageBulgeDistortionFilter.cpp  GPUImageBulgeDistortionFilter.h  GPUImageCGAColorspaceFilter.cpp  GPUImageCGAColorspaceFilter.h  GPUImageCannyEdgeDetectionFilter.cpp  GPUImageCannyEdgeDetectionFilter.h  GPUImageChromaKeyBlendFilter.cpp  GPUImageChromaKeyBlendFilter.h  GPUImageChromaKeyFilter.cpp  GPUImageChromaKeyFilter.h  GPUImageClosingFilter.cpp  GPUImageClosingFilter.h  GPUImageColorBlendFilter.cpp  GPUImageColorBlendFilter.h  GPUImageColorBurnBlendFilter.cpp  GPUImageColorBurnBlendFilter.h  GPUImageColorDodgeBlendFilter.cpp  GPUImageColorDodgeBlendFilter.h  GPUImageColorInvertFilter.cpp  GPUImageColorInvertFilter.h  GPUImageColorLocalBinaryPatternFilter.cpp  GPUImageColorLocalBinaryPatternFilter.h  (+232 more)
app/src/main/cpp/util/: FileUtil.cpp  FileUtil.h  Shader.cpp  Shader.h  TextureRotateUtil.cpp  TextureRotateUtil.h  const.h  openglHeader.h
app/src/main/java/com/lvhiei/cgpuimage/: CGPUImageRender.java  ListFilterActivity.java  Logger.java  MainActivity.java  OpenGLUtils.java  Rotation.java  TexturePreProcessRender.java  TextureRotationUtil.java
app/src/main/res/layout/: activity_list_filter.xml  activity_main.xml  vlist.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lvhiei/cgpuimage/: ExampleUnitTest.java
